Bug 1364627 - Fix leaking of Cairo scaled font when creating ScaledFontFontconfig from a recording. r=jrmuizel, a=ritu