gfx/2d/ScaledFontFontconfig.cpp
@@ -333,6 +333,7 @@ ScaledFontFontconfig::CreateFromInstanceData(const InstanceData& aInstanceData,
   RefPtr<ScaledFontFontconfig> scaledFont =
     new ScaledFontFontconfig(cairoScaledFont, pattern, aSize);
 
+  cairo_scaled_font_destroy(cairoScaledFont);
   FcPatternDestroy(pattern);
 
   return scaledFont.forget();
